--- a/frontend/user/index.html
+++ b/frontend/user/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpg" href="/Logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
-    <title>Vite + React + TS</title>
+    <title>Home Pro</title>
   </head>
   <body>
     <div id="root"></div>
