google map search implemented

--- a/frontend/user/index.html
+++ b/frontend/user/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/jpg" href="/Logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
 
     <title>Home Pro</title>
   </head>
